gccida/c1/layout_type
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/layout_type/src/stor-layout.c:1888:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *i; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/layout_type/src/stor-layout.c:1894:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v14; // r15 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/layout_type/src/stor-layout.c:1895:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v15; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/layout_type/src/stor-layout.c:1896:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v16; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/layout_type/src/stor-layout.c:1897:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v17; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/layout_type/src/stor-layout.c:1898:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v18; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/layout_type/src/stor-layout.c:1899:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v19; // r15 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/layout_type/src/stor-layout.c:1900:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *elements; // r12 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/layout_type/src/stor-layout.c:1905:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v25; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/layout_type/src/stor-layout.c:1906:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v26; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/layout_type/src/stor-layout.c:1908:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v28; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/layout_type/src/stor-layout.c:1950:14: error: called object type 'const enum mode_class [59]' is not a function or function pointer
( mode_class)( 6 - ( *( ( _BYTE *)&v42->block.common + 16) == 6)), 
~~~~~~~~~~~~~^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/layout_type/src/stor-layout.c:2031:1: error: statement requires expression of scalar type ('struct rtx_def' invalid)
if ( rtl[7] ) 
^    ~~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/layout_type/src/stor-layout.c:2033:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v13.rtwint = ( __int64)rtl[6].fld[0]; 
                       ^~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/layout_type/src/stor-layout.c:2038:20: error: expected expression
v14 = ( tree_node *)*( &global_trees + 16); 
                   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/layout_type/src/stor-layout.c:2038:9: error: use of undeclared identifier 'tree_node'
v14 = ( tree_node *)*( &global_trees + 16); 
        ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/layout_type/src/stor-layout.c:2061:20: error: expected expression
v25 = ( tree_node *)*( &global_trees + 12); 
                   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/layout_type/src/stor-layout.c:2061:9: error: use of undeclared identifier 'tree_node'
v25 = ( tree_node *)*( &global_trees + 12); 
        ^
18 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/layout_type/src/obj/stor-layout.o] Error 1
